<resources>
    <string name="app_name">Register</string>
    <string name="nama">Nama</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm. Pass</string>
    <string name="no_hp">No. HP</string>
    <string name="alamat">Alamat</string>
    <string name="register">Register</string>
    <string name="information">Information</string>
    <string name="email">Email</string>
</resources>
